# FactoryGame

./: Dockerfile  README.md  compose.yaml  dev-mode  dev-mode.bat  launch  license  main  main.c  run  run.bat
src/: CMakeLists.txt  launch  main.c  main.cpp
src/assets/: guistyle.rgs
src/headers/: biome.h  generation.h  grid.h  guistyleimpl.h  ore.h
src/headers/core/: guistyle.h  raygui.h
src/implementations/: biome.c  biome.cpp  generation.c  generation.cpp  grid.c  grid.cpp  guistyleimpl.c  guistyleimpl.cpp  ore.c  ore.cpp
